# nunc

./: .gitignore  Cargo.toml  README.md
data/: servers.json
examples/: dump.rs  instrument.rs  nts_check.rs  siv_test.rs
latex/: temporal proof.tex
src/: config.rs  consensus.rs  eagle.rs  error.rs  lib.rs  pool.rs  pool_data.rs  types.rs
src/ct/: capture.rs  extract.rs  mod.rs
src/sources/: daytime.rs  ftp.rs  https.rs  mod.rs  ntp.rs  nts.rs  roughtime.rs  smtp.rs  time_prot.rs
